# affleego-backend

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  BACKEND_IMPLEMENTATION_PLAN.md  README.md  docker-compose.mailhog.yml  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml  manage.py  opencode.json  pyproject.toml  ruff.toml
.github/chatmodes/: Kong Mode.chatmode.md
.github/instructions/: memory.instruction.md
.github/workflows/: dev-ci.yml  prod-ci.yml
config/: .env.template
deployment/: documentation.md
docker/: docker-compose.prod.yml
docker/caddy/: Caddyfile
docker/django/: Dockerfile  ci.sh  gunicorn.sh
docker/nginx/: Dockerfile  ci.sh  nginx.conf
docs/: Makefile  conf.py
docs/pages/template/: production-checklist.rst
scripts/: create_dev_database.sql
server/: asgi.py  urls.py
server/apps/deals/: admin.py  apps.py  models.py  urls.py  views.py
server/apps/deals/logic/: serializers.py
server/apps/deals/migrations/: 0001_initial.py  0002_deal_payout_schedule_deal_projected_payout_and_more.py  0003_alter_deal_description.py  0004_deal_keywords.py  0005_deal_requirements.py  0006_deal_commission_type.py  0007_dealstats.py  0008_alter_dealstats_unique_together_deal_logo_and_more.py
server/apps/main/: admin.py  models.py  test_main.py  urls.py  views.py
server/apps/main/logic/: serializers.py
server/apps/main/migrations/: 0001_initial.py  0002_remove_communitystats_total_affiliates_and_more.py  0003_promotions.py
server/apps/main/static/main/css/: index.css
server/apps/main/templates/main/: index.html
server/apps/users/: admin.py  apps.py  managers.py  models.py  test_users.py  urls.py  views.py
server/apps/users/logic/: serializers.py  utils.py
server/apps/users/migrations/: 0001_initial.py  0002_alter_user_managers.py  0003_verificationcode.py  0004_verificationcode_type.py  0005_verificationcode_users_verificationcode_type_valid.py  0006_alter_verificationcode_code.py  0007_useronboarding.py  0008_alter_useronboarding_marketing_methods.py  0009_useronboarding_affliate_experience_and_more.py  0010_user_last_login_ip_user_locale_user_timezone.py  0011_user_country.py
server/apps/users/templates/users/emails/: resend_verification_link.html  send_password_reset_link.html  verify_account.html  welcome.html
server/common/: api_response.py  exception_handler.py  mixins.py  serializers.py
server/common/django/templates/common/txt/: humans.txt
server/common/middleware/: http.py
server/common/notifications/: __init__.py  email.py  telegram.py
server/common/utils/: file_url_helpers.py  pagination.py
server/settings/: __init__.py
server/settings/components/: caches.py  common.py  csp.py  logging.py
server/settings/environments/: development.py  local.py.template  production.py  staging.py
tests/: conftest.py
tests/test_common/: test_pagination.py
