[project]
authors = [{ name = "Emmanuel Anebi", email = "anebiemmanuel@gmail.com" }]
name = "affleego-backend"
description = "Engine Sync"
version = "0.1.0"
requires-python = ">3.12,<3.13"
readme = "README.md"
dynamic = ["dependencies", "classifiers"]


[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
package-mode = false
classifiers = ["Private :: Do not Upload"]


[tool.poetry.dependencies]
django = { version = "5.2", extras = ["argon2"] }
django-split-settings = "^1.3"
django-axes = "^7.0"
django-csp = "^3.8"
django-health-check = "^3.18"
django-permissions-policy = "^4.24"
django-stubs-ext = "^5.1"

psycopg2-binary = "^2.9"
gunicorn = "^23.0"
python-decouple = "^3.8"
structlog = "^24.4"
wheel = "^0.45"
django-jazzmin = "3.0.1"
djangorestframework = "3.16.0"
markdown = "^3.7"
django-filter = "^25.1"
drf-spectacular = "^0.28.0"
rest-framework-simplejwt = "^0.0.2"
djangorestframework-simplejwt = "^5.5.0"
django-rest-passwordreset = "^1.5.0"
djangorestframework-camel-case = "^1.4.2"
django-cors-headers = "^4.7.0"
pillow = "^11.2.1"
pylint-django = "^2.6.1"
django-types = "^0.20.0"
djangorestframework-types = "^0.9.0"


[tool.poetry.group.dev.dependencies]
django-debug-toolbar = "^5.0"
django-migration-linter = "^5.1"
django-extra-checks = "^0.16"
django-query-counter = "^0.4"
nplusone = "^1.0"

wemake-python-styleguide = "^1.0"
ruff = "^0.9"
doc8 = "^1.1"

pytest = "^8.3"
pytest-django = "^4.9"
pytest-cov = "^6.0"
covdefaults = "^2.3"
django-coverage-plugin = "^3.1"
pytest-randomly = "^3.16"
pytest-timeout = "^2.3"
django-test-migrations = "^1.3"
hypothesis = "^6.123"

django-stubs = { version = "^5.1", extras = ["compatible-mypy"] }

djlint = "^1.36"
yamllint = "^1.35"
safety = "^3.2"
dotenv-linter = "^0.5"
polint = "^0.4"
dennis = "^1.1"
dump-env = "^1.5"
ipython = "^8.31"
pre-commit = "^4.2.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^8.1"
sphinx-autodoc-typehints = "^3.0"
tomli = "^2.2"
myst-parser = "^4.0"
furo = "^2024.8"


[tool.djlint]
ignore = "T003,H006,H030,H031"
include = "H017,H035"
indent = 2
blank_line_after_tag = "load,extends"
profile = "django"
max_line_length = 80
format_attribute_template_tags = true

# Plugin configs:
flake8-import-conventions.banned-from = ["ast"]
flake8-quotes.inline-quotes = "single"
mccabe.max-complexity = 6
pydocstyle.convention = "google"

[tool.ruff.lint.per-file-ignores]
"server/apps/*/migrations/*.py" = ["D101", "E501", "RUF012"]
"server/common/typing/*.py" = ["F401"]
"tests/*.py" = ["S101"]


[tool.pyright]
include = ["."]
exclude = ["**/node_modules", "**/__pycache__", "**/.venv", "**/.git"]
pythonVersion = "3.12"
typeCheckingMode = "basic"
reportMissingImports = "warning"
reportMissingTypeStubs = "warning"
reportUnknownParameterType = "warning"
reportUnknownArgumentType = "warning"
reportUnknownVariableType = "warning"
reportUnknownMemberType = "warning"
reportMissingTypeArgument = "warning"
reportInvalidTypeVarUse = "warning"
